--- a/.github/workflows/kicad-package.yml
+++ b/.github/workflows/kicad-package.yml
@@ -68,8 +68,8 @@ jobs:
       - name: Upload installer as asset to release
         uses: svenstaro/upload-release-action@v2
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ./.out/kicad-huaqiu-8.0.5-x86_64.exe
+          repo_token: ${{ secrets.HUAQIU_ELECTRONICS_TOKEN }}
+          file: ./.out/kicad-huaqiu-${{ steps.latest-release.outputs.tag }}-x86_64.exe
           asset_name: hq-kicad-${{ steps.latest-release.outputs.tag }}-x86_64.exe
           overwrite: true
           tag: ${{ steps.latest-release.outputs.tag }}
