Set the runner version to windows-2019

--- a/.github/workflows/kicad-package.yml
+++ b/.github/workflows/kicad-package.yml
@@ -9,7 +9,7 @@ on: # yamllint disable-line rule:truthy
 
 jobs:
   create_archive:
-    runs-on: windows-latest
+    runs-on: windows-2019
     steps:
       - name: Get latest tag
         uses: oprypin/find-latest-tag@v1
