ci(kicad): improve caching strategy for package downloads and vcpkg
- Update cache keys to include release tag for better version-specific caching
- Use restore-keys with wildcard for more flexible cache matching
- Remove unnecessary commented line

--- a/.github/workflows/kicad-package.yml
+++ b/.github/workflows/kicad-package.yml
@@ -36,15 +36,13 @@ jobs:
       - name: Cache packages downloaded
         uses: actions/cache@v3
         with:
-          key: package_downloaed
-          restore-keys: package_downloaed
+          key: package-downloaded-${{ steps.latest-release.outputs.tag }}
+          restore-keys: |
+            package-downloaded-
           path: |
             .build
             .downloads
             .support
-
-      # - name: install wxPython
-      # run: pip install -r ./requirements.txt
 
       - name: Triggers a build
         run: ./build.ps1 -Build -Latest -Arch x64 -BuildType Release
@@ -52,8 +50,9 @@ jobs:
       - name: Cache vcpkg
         uses: actions/cache@v3
         with:
-          key: vcpkg_cache
-          restore-keys: vcpkg_cache
+          key: vcpkg-cache-${{ steps.latest-release.outputs.tag }}
+          restore-keys: |
+            vcpkg-cache-
           path: |
             vcpkg
             msys64
