ci(kicad): improve cache usage and standardize build process
- Add top-level YAML separator for better structure
- Rename cache steps for clarity
- Use consistent naming for build-related steps
- Optimize cache keys and restore keys for downloaded packages and vcpkg
- Improve upload step description

--- a/.github/workflows/kicad-package.yml
+++ b/.github/workflows/kicad-package.yml
@@ -1,3 +1,4 @@
+---
 name: KiCAD client packaging
 on: # yamllint disable-line rule:truthy
   release:
@@ -20,27 +21,27 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Cache downloaded packages
+      - name: Try load downloaded cache
         uses: actions/cache@v3
         with:
+          key: package-downloaded
+          restore-keys: |
+            package-downloaded
           path: |
             .build
             .downloads
             .support
-          key: packages-${{ runner.os }}-${{ hashFiles('**/build.ps1') }}
-          restore-keys: |
-            packages-${{ runner.os }}-
 
-      - name: Cache vcpkg and msys
+      - name: Try load vcpkg cache
         uses: actions/cache@v3
         with:
+          key: vcpkg-cache
+          restore-keys: |
+            vcpkg-cache
           path: |
             vcpkg
             msys64
             msys32
-          key: vcpkg-${{ runner.os }}-${{ hashFiles('**/build.ps1') }}
-          restore-keys: |
-            vcpkg-${{ runner.os }}-
 
       - name: Configure
         run: ./build.ps1 -Config -UseMsvcCmake $False
@@ -51,19 +52,19 @@ jobs:
       - name: Checkout any required tools, setup build environment variables
         run: ./build.ps1 -Env -Arch x64
 
-      - name: Rebuild vcpkg dependencies
+      - name: Rebuilds vcpkg dependencies
         run: ./build.ps1 -Vcpkg -Latest -Arch x64
 
-      - name: Build
+      - name: Triggers a build
         run: ./build.ps1 -Build -Latest -Arch x64 -BuildType Release
 
-      - name: Prepare Package
-        run: ./build.ps1 -PreparePackage -Arch x64 -BuildType Release
+      - name: Triggers a package operation
+        run: ./build.ps1 -PreparePackage  -Arch x64   -BuildType Release
 
-      - name: Package using NSIS
-        run: ./build.ps1 -Package -PackType Nsis -Arch x64 -BuildType Release
+      - name: Triggers a package operation Nsis
+        run: ./build.ps1 -Package  -PackType Nsis   -Arch x64   -BuildType Release
 
-      - name: Upload installer to release
+      - name: Upload installer as asset to release
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.HUAQIU_ELECTRONICS_TOKEN }}
