ci(kicad-package): add periodic triggering of packaging workflow
- Add schedule for Sunday and Wednesday at midnight
- Keep cache active by periodic runs

--- a/.github/workflows/kicad-package.yml
+++ b/.github/workflows/kicad-package.yml
@@ -1,6 +1,10 @@
 ---
 name: KiCAD client packaging
-on: # yamllint disable-line rule:truthy
+on:
+  # Github will remove the cache if not used in 7 days
+  schedule:
+    - cron: "0 0 * * 0" # Sunday
+    - cron: "0 0 * * 3" # Wednesday
   release:
     branches: master
     types:
