--- a/.github/workflows/kicad-package.yml
+++ b/.github/workflows/kicad-package.yml
@@ -63,10 +63,10 @@ jobs:
         run: ./build.ps1 -Build -Latest -Arch x64 -BuildType Release
 
       - name: Triggers a package operation
-        run: ./build.ps1 -PreparePackage  -Arch x64   -BuildType Release
+        run: ./build.ps1 -PreparePackage  -Arch x64 -BuildType Release
 
       - name: Triggers a package operation Nsis
-        run: ./build.ps1 -Package  -PackType Nsis   -Arch x64   -BuildType Release
+        run: ./build.ps1 -Package  -PackType Nsis -Arch x64   -BuildType Release -DebugSymbols
 
       - name: Upload installer as asset to release
         uses: svenstaro/upload-release-action@v2
