--- a/.github/workflows/kicad-package.yml
+++ b/.github/workflows/kicad-package.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   create_archive:
-    runs-on: windows-2019
+    runs-on: windows-latest
     steps:
       - name: Get latest tag
         uses: oprypin/find-latest-tag@v1
