ci(kicad): update vcpkg cache strategy
- Rename vcpkg cache to vcpkg binary cache
- Update cache path to use LOCALAPPDATA/vcpkg/archives
- Remove unnecessary restore keys and paths

--- a/.github/workflows/kicad-package.yml
+++ b/.github/workflows/kicad-package.yml
@@ -36,16 +36,13 @@ jobs:
             .downloads
             .support
 
-      - name: Try load vcpkg cache
+      - name: Try load vcpkg binary cache
         uses: actions/cache@v3
         with:
-          key: vcpkg-cache
+          key: vcpkg-binary-cache
           restore-keys: |
-            vcpkg-cache
-          path: |
-            vcpkg
-            msys64
-            msys32
+            vcpkg-binary-cache
+          path: ${{ env.LOCALAPPDATA }}/vcpkg/archives
 
       - name: Configure
         run: ./build.ps1 -Config -UseMsvcCmake $False
