ci(kicad): update Windows build script
- Fix path syntax for vcpkg binary cache
- Remove unnecessary PowerShell syntax in GitHub Actions workflow

--- a/.github/workflows/kicad-package.yml
+++ b/.github/workflows/kicad-package.yml
@@ -42,7 +42,7 @@ jobs:
           key: vcpkg-binary-cache
           restore-keys: |
             vcpkg-binary-cache
-          path: ${{ env.LOCALAPPDATA }}/vcpkg/archives
+          path: $env:LOCALAPPDATA/vcpkg/archives
 
       - name: Configure
         run: ./build.ps1 -Config -UseMsvcCmake $False
