ci: comment out package cache schedule
- Remove active schedule for package caching
- Add commented-out schedule lines for future reference

--- a/.github/workflows/kicad-package.yml
+++ b/.github/workflows/kicad-package.yml
@@ -1,10 +1,10 @@
 ---
 name: KiCAD client packaging
 on:
-  # Github will remove the cache if not used in 7 days
-  schedule:
-    - cron: "0 0 * * 0" # Sunday
-    - cron: "0 0 * * 3" # Wednesday
+  # # Github will remove the cache if not used in 7 days
+  # schedule:
+  #   - cron: "0 0 * * 0" # Sunday
+  #   - cron: "0 0 * * 3" # Wednesday
   release:
     branches: master
     types:
