--- a/.github/workflows/kicad-package.yml
+++ b/.github/workflows/kicad-package.yml
@@ -19,11 +19,10 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.HUAQIU_ELECTRONICS_TOKEN }}
-          file: ./.out/kicad-huaqiu-${{ steps.latest-release.outputs.tag }}-x86_64.exe
-          asset_name: kicad-huaqiu-${{ steps.latest-release.outputs.tag }}-x86_64.exe
+          file: ./.out/kicad-huaqiu-9.0.3-r1-x86_64.exe
+          asset_name: kicad-huaqiu-9.0.3-r1-x86_64.exe
           overwrite: true
-          tag: ${{ steps.latest-release.outputs.tag }}
-
+          tag: "9.0.3-r1"
       - name: Upload pdbs as asset to release
         uses: svenstaro/upload-release-action@v2
         with:
